--- a/dashboard/src/main/resources/application.yml
+++ b/dashboard/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 server:
   port: 9999
-  address: 0.0.0.0
+#  address: 0.0.0.0
   servlet:
     encoding:
       force: true
       charset: UTF-8
+  tomcat:
+    connection-timeout: 300000
 
 
 spring:
@@ -12,6 +14,9 @@ spring:
     name: dashboard
   main:
     allow-bean-definition-overriding: true
+  mvc:
+    async:
+      request-timeout: 20000
   # database
   datasource:
     url: jdbc:postgresql://172.16.10.126:5432/bugbyebye
@@ -37,3 +42,13 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:10010/eureka/
+
+feign:
+  client:
+    config:
+      dashboard:
+        connect-timeout: 5000
+        read-timeout: 10000
+      manager:
+        connect-timeout: 5000
+        read-timeout: 10000
