--- a/exception-eureka/src/main/resources/application.yml
+++ b/exception-eureka/src/main/resources/application.yml
@@ -12,3 +12,12 @@ eureka:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   instance:
     hostname: localhost
+feign:
+  client:
+    config:
+      dashboard:
+        connect-timeout: 5000
+        read-timeout: 10000
+      manager:
+        connect-timeout: 5000
+        read-timeout: 10000
