--- a/exception-transfer/src/main/resources/application.yml
+++ b/exception-transfer/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server:
   port: 9997
-  address: 0.0.0.0
+#  address: 0.0.0.0
   servlet:
     encoding:
       force: true
@@ -20,3 +20,13 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:10010/eureka/
+
+feign:
+  client:
+    config:
+      dashboard:
+        connect-timeout: 5000
+        read-timeout: 10000
+      manager:
+        connect-timeout: 5000
+        read-timeout: 10000
