--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <module>common</module>
     <module>manager</module>
     <module>exception-eureka</module>
-    <module>exception-zuul</module>
     <module>exception-transfer</module>
+    <module>exception-cloud-gateway</module>
   </modules>
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -38,20 +38,7 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-logging</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-log4j2</artifactId>
-    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-aop</artifactId>
