--- a/exception-transfer/pom.xml
+++ b/exception-transfer/pom.xml
@@ -17,6 +17,20 @@
   </properties>
   <dependencies>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-logging</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-log4j2</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.xzlcorp</groupId>
       <artifactId>common</artifactId>
       <version>0.0.1-SNAPSHOT</version>
