--- a/exception-manager/pom.xml
+++ b/exception-manager/pom.xml
@@ -36,5 +36,9 @@
       <artifactId>exception-common</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka</artifactId>
+    </dependency>
   </dependencies>
 </project>
