--- a/exception-manager/src/main/resources/application.yml
+++ b/exception-manager/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
     name: exception-manager
   main:
     allow-bean-definition-overriding: true
+  # redis
+  redis:
+    host: 127.0.0.1
+    port: 6379
   # database
   datasource:
     url: jdbc:postgresql://172.16.10.126:5432/bugbyebye
@@ -25,6 +29,22 @@ spring:
       maximum-pool-size: 10
       pool-prepared-statements: true
       max-open-prepared-statements: 100
+  #kafka配置
+  kafka:
+    #这里改为你的kafka服务器ip和端口号
+    bootstrap-servers: 127.0.0.1:9092
+    #=============== producer  =======================
+    producer:
+      #如果该值大于零时，表示启用重试失败的发送次数
+      retries: 0
+      #每当多个记录被发送到同一分区时，生产者将尝试将记录一起批量处理为更少的请求，默认值为16384(单位字节)
+      batch-size: 16384
+      #生产者可用于缓冲等待发送到服务器的记录的内存总字节数，默认值为3355443
+      buffer-memory: 33554432
+      #key的Serializer类，实现类实现了接口org.apache.kafka.common.serialization.Serializer
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      #value的Serializer类，实现类实现了接口org.apache.kafka.common.serialization.Serializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
 mybatis:
   mapper-locations: classpath:mappers/*.xml
@@ -37,9 +57,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:10010/eureka/
 
-redis:
-  host: 127.0.0.1
-  port: 6379
+
 
 feign:
   client:
