--- a/exception-cloud-gateway/pom.xml
+++ b/exception-cloud-gateway/pom.xml
@@ -36,4 +36,22 @@
       <artifactId>spring-webmvc</artifactId>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <mainClass>com.xzlcorp.exception.eureka.ExceptionEurekaApplication</mainClass>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
