--- a/exception-dashboard/pom.xml
+++ b/exception-dashboard/pom.xml
@@ -37,5 +37,22 @@
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
-
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <mainClass>com.xzlcorp.exception.dashboard.DashboardApplication</mainClass>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
