--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.login=admin
-sonar.password=admin
+sonar.password=qingfei775
 #sonar.projectKey=exception-service
 sonar.projectName=exception-service
 sonar.projectVersion=0.0.1
