--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.login=admin
 sonar.password=qingfei775
-#sonar.projectKey=exception-service
+sonar.projectKey=exception-service
 sonar.projectName=exception-service
 sonar.projectVersion=0.0.1
 sonar.sources=.
