--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.login=admin
-sonar.password=qingfei775
+#sonar.login=admin
+#sonar.password=qingfei775
 sonar.host.url=http://192.168.6.142:9000
 # ?????sonar?????
 sonar.projectKey=exception-service
