--- a/doc/logstash/exception-service.conf
+++ b/doc/logstash/exception-service.conf
@@ -39,7 +39,7 @@ output {
   }
   if [event][category] == "error" {
     elasticsearch {
-      hosts => "http://localhost:9200"
+      hosts => "http://192.168.6.150:9200"
       # user => "elastic"
       # password => "changeme"
       index => "ohbug-event-error-%{+YYYY.MM.dd}"
@@ -52,7 +52,7 @@ output {
   }
   if [event][category] == "message" {
     elasticsearch {
-      hosts => "http://localhost:9200"
+      hosts => "http://192.168.6.150:9200"
       # user => "elastic"
       # password => "changeme"
       index => "ohbug-event-message-%{+YYYY.MM.dd}"
@@ -65,7 +65,7 @@ output {
   }
   if [event][category] == "feedback" {
     elasticsearch {
-      hosts => "http://localhost:9200"
+      hosts => "http://192.168.6.150:9200"
       # user => "elastic"
       # password => "changeme"
       index => "ohbug-event-feedback-%{+YYYY.MM.dd}"
@@ -78,7 +78,7 @@ output {
   }
   if [event][category] == "view" {
     elasticsearch {
-      hosts => "http://localhost:9200"
+      hosts => "http://192.168.6.150:9200"
       # user => "elastic"
       # password => "changeme"
       index => "ohbug-event-view-%{+YYYY.MM.dd}"
@@ -91,7 +91,7 @@ output {
   }
   if [event][category] == "performance" {
     elasticsearch {
-      hosts => "http://localhost:9200"
+      hosts => "http://192.168.6.150:9200"
       # user => "elastic"
       # password => "changeme"
       index => "ohbug-performance-%{+YYYY.MM.dd}"
