--- a/doc/logstash/exception-service.conf
+++ b/doc/logstash/exception-service.conf
@@ -1,33 +1,33 @@
-# kafka-topics.sh --create --zookeeper localhost:2181 --replication-factor 1 --partitions 1 --topic TOPIC_MANAGER_LOGSTASH_EVENT_ERROR
+# kafka-topics.sh --create --zookeeper 192.168.6.174:2181 --replication-factor 1 --partitions 1 --topic TOPIC_MANAGER_LOGSTASH_EVENT_ERROR
 # ...创建其他四个topic
 
 input {
 	kafka {
-    bootstrap_servers => "http://127.0.0.1:9092"
+    bootstrap_servers => "http://192.168.6.174:9092"
     codec => "json"
     decorate_events => true
     topics => ["TOPIC_MANAGER_LOGSTASH_EVENT_ERROR"]
   }
   kafka {
-    bootstrap_servers => "http://127.0.0.1:9092"
+    bootstrap_servers => "http://192.168.6.174:9092"
     codec => "json"
     decorate_events => true
     topics => ["TOPIC_MANAGER_LOGSTASH_EVENT_MESSAGE"]
   }
   kafka {
-    bootstrap_servers => "http://127.0.0.1:9092"
+    bootstrap_servers => "http://192.168.6.174:9092"
     codec => "json"
     decorate_events => true
     topics => ["TOPIC_MANAGER_LOGSTASH_EVENT_FEEDBACK"]
   }
  	kafka {
-    bootstrap_servers => "http://127.0.0.1:9092"
+    bootstrap_servers => "http://192.168.6.174:9092"
     codec => "json"
     decorate_events => true
     topics => ["TOPIC_MANAGER_LOGSTASH_EVENT_VIEW"]
   }
   kafka {
-    bootstrap_servers => "http://127.0.0.1:9092"
+    bootstrap_servers => "http://192.168.6.174:9092"
     codec => "json"
     decorate_events => true
     topics => ["TOPIC_MANAGER_LOGSTASH_PERFORMANCE"]
@@ -39,7 +39,7 @@ output {
   }
   if [event][category] == "error" {
     elasticsearch {
-      hosts => "http://192.168.6.150:9200"
+      hosts => "http://192.168.6.174:9200"
       # user => "elastic"
       # password => "changeme"
       index => "ohbug-event-error-%{+YYYY.MM.dd}"
@@ -52,7 +52,7 @@ output {
   }
   if [event][category] == "message" {
     elasticsearch {
-      hosts => "http://192.168.6.150:9200"
+      hosts => "http://192.168.6.174:9200"
       # user => "elastic"
       # password => "changeme"
       index => "ohbug-event-message-%{+YYYY.MM.dd}"
@@ -65,7 +65,7 @@ output {
   }
   if [event][category] == "feedback" {
     elasticsearch {
-      hosts => "http://192.168.6.150:9200"
+      hosts => "http://192.168.6.174:9200"
       # user => "elastic"
       # password => "changeme"
       index => "ohbug-event-feedback-%{+YYYY.MM.dd}"
@@ -78,7 +78,7 @@ output {
   }
   if [event][category] == "view" {
     elasticsearch {
-      hosts => "http://192.168.6.150:9200"
+      hosts => "http://192.168.6.174:9200"
       # user => "elastic"
       # password => "changeme"
       index => "ohbug-event-view-%{+YYYY.MM.dd}"
@@ -91,7 +91,7 @@ output {
   }
   if [event][category] == "performance" {
     elasticsearch {
-      hosts => "http://192.168.6.150:9200"
+      hosts => "http://192.168.6.174:9200"
       # user => "elastic"
       # password => "changeme"
       index => "ohbug-performance-%{+YYYY.MM.dd}"
