--- a/exception-cloud-gateway/src/main/resources/application.yml
+++ b/exception-cloud-gateway/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:10010/eureka/
+      defaultZone: http://192.168.6.150:10010/eureka/
 
 spring:
   application:
