--- a/exception-dashboard/src/main/resources/application.yml
+++ b/exception-dashboard/src/main/resources/application.yml
@@ -41,7 +41,7 @@ mybatis:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:10010/eureka/
+      defaultZone: http://192.168.6.150:10010/eureka/
 
 feign:
   client:
