--- a/exception-eureka/src/main/resources/application.yml
+++ b/exception-eureka/src/main/resources/application.yml
@@ -11,7 +11,7 @@ eureka:
     service-url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   instance:
-    hostname: localhost
+    hostname: 192.168.6.150
 feign:
   client:
     config:
