--- a/exception-manager/src/main/resources/application.yml
+++ b/exception-manager/src/main/resources/application.yml
@@ -32,12 +32,12 @@ spring:
   # elasticsearch
   data:
     elasticsearch:
-      host: 192.168.6.150
+      host: 192.168.6.174
       port: 9200
   #kafka配置
   kafka:
     #这里改为你的kafka服务器ip和端口号
-    bootstrap-servers: 127.0.0.1:9092
+    bootstrap-servers: 192.168.6.174:9092
     #=============== producer  =======================
     producer:
       #如果该值大于零时，表示启用重试失败的发送次数
@@ -61,7 +61,7 @@ mybatis:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:10010/eureka/
+      defaultZone: http://192.168.6.150:10010/eureka/
 feign:
   client:
     config:
