--- a/exception-eureka/pom.xml
+++ b/exception-eureka/pom.xml
@@ -29,6 +29,7 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
           <mainClass>com.xzlcorp.exception.eureka.ExceptionEurekaApplication</mainClass>
+          <outputDirectory>../target</outputDirectory>
         </configuration>
         <executions>
           <execution>
