--- a/exception-dashboard/pom.xml
+++ b/exception-dashboard/pom.xml
@@ -44,6 +44,7 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
           <mainClass>com.xzlcorp.exception.dashboard.DashboardApplication</mainClass>
+          <outputDirectory>../target</outputDirectory>
         </configuration>
         <executions>
           <execution>
