--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectKey=exception-service
 sonar.projectName=exception-service
 sonar.projectVersion=0.0.1
 sonar.sources=.
-sonar.exclusions=**/test/**,**/target/**
+sonar.exclusions=**/test/**,**/target/**,target/**
 
 sonar.java.source=11
 sonar.java.target=11
