--- a/exception-eureka/pom.xml
+++ b/exception-eureka/pom.xml
@@ -39,6 +39,20 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>com.spotify</groupId>
+        <artifactId>dockerfile-maven-plugin</artifactId>
+        <version>1.4.10</version>
+        <configuration>
+          <repository>
+            ${project.artifactId}
+          </repository>
+          <tag>${project.version}</tag>
+          <buildArgs>
+            <PKG>target/${project.artifactId}.jar</PKG>
+          </buildArgs>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
