--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,20 @@
         <groupId>org.mybatis.generator</groupId>
         <artifactId>mybatis-generator-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>com.spotify</groupId>
+        <artifactId>dockerfile-maven-plugin</artifactId>
+        <version>1.4.10</version>
+        <configuration>
+          <repository>
+            ${project.artifactId}
+          </repository>
+          <tag>${project.version}</tag>
+          <buildArgs>
+            <PKG>target/${project.artifactId}.jar</PKG>
+          </buildArgs>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
