--- a/exception-manager/pom.xml
+++ b/exception-manager/pom.xml
@@ -63,7 +63,7 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
           <mainClass>com.xzlcorp.exception.manager.ManagerApplication</mainClass>
-          <outputDirectory>../target</outputDirectory>
+<!--          <outputDirectory>../target</outputDirectory>-->
         </configuration>
         <executions>
           <execution>
@@ -83,7 +83,7 @@
           </repository>
           <tag>${project.version}</tag>
           <buildArgs>
-            <PKG>target/${project.artifactId}.jar</PKG>
+            <PKG>target/${project.artifactId}-${project.version}.jar</PKG>
           </buildArgs>
         </configuration>
       </plugin>
