--- a/exception-dashboard/pom.xml
+++ b/exception-dashboard/pom.xml
@@ -44,7 +44,7 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
           <mainClass>com.xzlcorp.exception.dashboard.DashboardApplication</mainClass>
-          <outputDirectory>../target</outputDirectory>
+<!--          <outputDirectory>../target</outputDirectory>-->
         </configuration>
         <executions>
           <execution>
@@ -64,7 +64,7 @@
           </repository>
           <tag>${project.version}</tag>
           <buildArgs>
-            <PKG>target/${project.artifactId}.jar</PKG>
+            <PKG>target/${project.artifactId}-${project.version}.jar</PKG>
           </buildArgs>
         </configuration>
       </plugin>
