--- a/exception-eureka/pom.xml
+++ b/exception-eureka/pom.xml
@@ -29,7 +29,7 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
           <mainClass>com.xzlcorp.exception.eureka.ExceptionEurekaApplication</mainClass>
-          <outputDirectory>../target</outputDirectory>
+<!--          <outputDirectory>../target</outputDirectory>-->
         </configuration>
         <executions>
           <execution>
@@ -49,7 +49,7 @@
           </repository>
           <tag>${project.version}</tag>
           <buildArgs>
-            <PKG>target/${project.artifactId}.jar</PKG>
+            <PKG>target/${project.artifactId}-${project.version}.jar</PKG>
           </buildArgs>
         </configuration>
       </plugin>
