--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,11 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-openfeign</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>com.spotify</groupId>
+      <artifactId>dockerfile-maven-plugin</artifactId>
+      <version>1.4.10</version>
+    </dependency>
   </dependencies>
 
   <build>
