--- a/exception-eureka/pom.xml
+++ b/exception-eureka/pom.xml
@@ -45,7 +45,7 @@
         <version>1.4.10</version>
         <configuration>
           <repository>
-            ${project.artifactId}
+            ${harbor}/${project.artifactId}
           </repository>
           <tag>${project.version}</tag>
           <buildArgs>
