--- a/exception-manager/pom.xml
+++ b/exception-manager/pom.xml
@@ -79,7 +79,7 @@
         <version>1.4.10</version>
         <configuration>
           <repository>
-            ${project.artifactId}
+            ${harbor}/${project.artifactId}
           </repository>
           <tag>${project.version}</tag>
           <buildArgs>
