--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
   <properties>
     <java.version>11</java.version>
     <harbor>192.168.6.150:8085</harbor>
+    <harborRepo>tensquare</harborRepo>
 <!--    <sonar.projectKey>backend_exception-service_AXzUX8y4Cgq56jMkNLpg</sonar.projectKey>-->
   </properties>
   <dependencyManagement>
