--- a/exception-cloud-gateway/pom.xml
+++ b/exception-cloud-gateway/pom.xml
@@ -59,7 +59,7 @@
         <version>1.4.10</version>
         <configuration>
           <repository>
-            ${harbor}/${project.artifactId}
+            ${harbor}/${harborRepo}/${project.artifactId}
           </repository>
           <tag>${project.version}</tag>
           <buildArgs>
