--- a/exception-cloud-gateway/src/main/resources/application.yml
+++ b/exception-cloud-gateway/src/main/resources/application.yml
@@ -5,6 +5,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://192.168.6.174:10010/eureka/
+  instance:
+    prefer-ip-address: true
 
 spring:
   application:
