--- a/exception-eureka/src/main/resources/application.yml
+++ b/exception-eureka/src/main/resources/application.yml
@@ -12,6 +12,7 @@ eureka:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   instance:
     hostname: 192.168.6.150
+    prefer-ip-address: true
 feign:
   client:
     config:
