--- a/exception-cloud-gateway/src/main/resources/application.yml
+++ b/exception-cloud-gateway/src/main/resources/application.yml
@@ -6,7 +6,8 @@ eureka:
     service-url:
       defaultZone: http://192.168.6.174:10010/eureka/
   instance:
-    prefer-ip-address: true
+    hostname: 192.168.6.174
+    #    prefer-ip-address: true
 
 spring:
   application:
