--- a/exception-transfer/src/main/resources/application.yml
+++ b/exception-transfer/src/main/resources/application.yml
@@ -21,7 +21,8 @@ eureka:
     service-url:
       defaultZone: http://192.168.6.174:10010/eureka/
   instance:
-    prefer-ip-address: true
+#    prefer-ip-address: true
+    hostname: 192.168.6.174
 
 feign:
   client:
