--- a/exception-transfer/src/main/resources/application.yml
+++ b/exception-transfer/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://192.168.6.174:10010/eureka/
+      defaultZone: http://192.168.6.174:10010/eureka/, http://192.168.6.194:10010/eureka/
   instance:
 #    prefer-ip-address: true
     hostname: 192.168.6.174
