--- a/exception-transfer/src/main/resources/application.yml
+++ b/exception-transfer/src/main/resources/application.yml
@@ -16,14 +16,6 @@ spring:
     host: 192.168.6.194
     port: 6379
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://192.168.6.174:10010/eureka/, http://192.168.6.194:10010/eureka/
-  instance:
-#    prefer-ip-address: true
-    hostname: 192.168.6.174
-
 feign:
   client:
     config:
@@ -33,3 +25,21 @@ feign:
       manager:
         connect-timeout: 5000
         read-timeout: 10000
+---
+spring:
+  profiles: dev
+eureka:
+  client:
+    service-url:
+      defaultZone: http://192.168.6.174:10010/eureka/
+  instance:
+    hostname: 192.168.6.174
+---
+spring:
+  profiles: test
+eureka:
+  client:
+    service-url:
+      defaultZone: http://192.168.6.194:10010/eureka/
+  instance:
+    hostname: 192.168.6.194
