--- a/exception-eureka/src/main/resources/application.yml
+++ b/exception-eureka/src/main/resources/application.yml
@@ -32,6 +32,8 @@ eureka:
   instance:
     hostname: 192.168.6.174
   client:
+    register-with-eureka: false
+    fetch-registry: false
     service-url:
       defaultZone: http://192.168.6.174:${server.port}/eureka/
 
@@ -42,5 +44,7 @@ eureka:
   instance:
     hostname: 192.168.6.182
   client:
+    register-with-eureka: false
+    fetch-registry: false
     service-url:
       defaultZone: http://192.168.6.182:${server.port}/eureka/
