--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.3.10.RELEASE</version>
-    <relativePath/> <!-- lookup parent from repository -->
+<!--    <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
   </parent>
   <groupId>com.xzlcorp</groupId>
   <artifactId>exception-service</artifactId>
@@ -113,7 +113,7 @@
     <dependency>
       <groupId>org.jetbrains</groupId>
       <artifactId>annotations</artifactId>
-      <version>RELEASE</version>
+      <version>23.0.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
