--- a/exception-eureka/src/main/resources/application.yml
+++ b/exception-eureka/src/main/resources/application.yml
@@ -1,50 +1,24 @@
+server:
+  port: ${PORT:10010}
 spring:
   application:
     name: exception-eureka
-
-server:
-  port: 10010
-
-# 单机版
-# eureka:
-#   client:
-#     fetch-registry: false
-#     register-with-eureka: true
-#     service-url:
-#       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-#   instance:
-#     hostname: 192.168.6.174
-# feign:
-#   client:
-#     config:
-#       dashboard:
-#         connect-timeout: 5000
-#         read-timeout: 10000
-#       manager:
-#         connect-timeout: 5000
-#         read-timeout: 10000
-
-# 区分环境版
----
-spring:
-  profiles: dev
 eureka:
-  instance:
-    hostname: 192.168.6.174
+  server:
+    # 续期时间，即扫描失效服务的间隔时间(缺省为60*1000ms)
+    eviction-interval-timer-in-ms: 5000
+    enable-self-preservation: false
+    use-read-only-response-cache: false
   client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      defaultZone: http://192.168.6.174:${server.port}/eureka/
-
----
-spring:
-  profiles: test
-eureka:
+    # eureka client间隔多久去拉取服务注册信息 默认30s
+    registry-fetch-interval-seconds: 5
+    serviceUrl:
+      defaultZone: ${EUREKA_SERVER:http://127.0.0.1:${server.port}/eureka/}
   instance:
-    hostname: 192.168.6.182
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      defaultZone: http://192.168.6.182:${server.port}/eureka/
+    # 心跳间隔时间，即发送一次心跳之后，多久在发起下一次(缺省为30s)
+    lease-renewal-interval-in-seconds: 5
+    # 在收到一次心跳之后，等待下一次心跳的空档时间，大于心跳间隔即可，即服务续约到期时间(缺省为90s)
+    lease-expiration-duration-in-seconds: 10
+    instance-id: ${EUREKA_INSTANCE_HOSTNAME:${spring.application.name}}:${server.port}@${random.long(1000000,9999999)}
+    hostname: ${EUREKA_INSTANCE_HOSTNAME:${spring.application.name}}
+ 
