--- a/exception-dashboard/pom.xml
+++ b/exception-dashboard/pom.xml
@@ -28,6 +28,14 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-redis</artifactId>
     </dependency>
@@ -50,9 +58,10 @@
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
+    <artifactId>spring-boot-maven-plugin</artifactId>
+    <version>2.6.2</version>
         <configuration>
-          <mainClass>com.xzlcorp.exception.dashboard.DashboardApplication</mainClass>
+          <mainClass>com.xzlcorp.exception.dashboard.ExceptionDashboardApplication</mainClass>
 <!--          <outputDirectory>../target</outputDirectory>-->
         </configuration>
         <executions>
