--- a/exception-dashboard/src/main/resources/application.yml
+++ b/exception-dashboard/src/main/resources/application.yml
@@ -1,76 +1,3 @@
-server:
-  port: 9999
-#  address: 0.0.0.0
-  servlet:
-    encoding:
-      force: true
-      charset: UTF-8
-  tomcat:
-    connection-timeout: 300000
-
-
 spring:
-  application:
-    name: exception-dashboard
-  main:
-    allow-bean-definition-overriding: true
-  mvc:
-    async:
-      request-timeout: 20000
-  # database
-  datasource:
-    # url: jdbc:postgresql://192.168.6.182:5432/dev
-    # username: postgres
-    # password: 123456
-    type: com.zaxxer.hikari.HikariDataSource
-    driver-class-name: org.postgresql.Driver
-    hikari:
-      connection-timeout: 30000
-      idle-timeout: 30000
-      minimum-idle: 10
-      maximum-pool-size: 10
-      pool-prepared-statements: true
-      max-open-prepared-statements: 100
-
-mybatis:
-  mapper-locations: classpath:mappers/*.xml
-  configuration:
-    map-underscore-to-camel-case: true
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-
-feign:
-  client:
-    config:
-      dashboard:
-        connect-timeout: 5000
-        read-timeout: 10000
-      manager:
-        connect-timeout: 5000
-        read-timeout: 10000
-
----
-spring:
-  profiles: dev
-  datasource:
-    url: jdbc:postgresql://192.168.6.194:5432/dev
-    username: postgres
-    password: 123456
-eureka:
-  client:
-    service-url:
-      defaultZone: http://192.168.6.174:10010/eureka/
-  instance:
-    hostname: 192.168.6.174
----
-spring:
-  profiles: test
-  datasource:
-    url: jdbc:postgresql://192.168.6.194:5432/dev
-    username: postgres
-    password: 123456
-eureka:
-  client:
-    service-url:
-      defaultZone: http://192.168.6.182:10010/eureka/
-  instance:
-    hostname: 192.168.6.182
+  profiles:
+    active: dev
