--- a/exception-manager/pom.xml
+++ b/exception-manager/pom.xml
@@ -21,6 +21,18 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-redis</artifactId>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.springframework.cloud</groupId>-->
+<!--      <artifactId>spring-cloud-starter-loadbalancer</artifactId>-->
+<!--    </dependency>-->
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.springframework.session</groupId>
       <artifactId>spring-session-data-redis</artifactId>
@@ -68,9 +80,10 @@
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
+    <artifactId>spring-boot-maven-plugin</artifactId>
+    <version>2.6.2</version>
         <configuration>
-          <mainClass>com.xzlcorp.exception.manager.ManagerApplication</mainClass>
+          <mainClass>com.xzlcorp.exception.manager.ExceptionManagerApplication</mainClass>
 <!--          <outputDirectory>../target</outputDirectory>-->
         </configuration>
         <executions>
