--- a/exception-transfer/pom.xml
+++ b/exception-transfer/pom.xml
@@ -17,6 +17,14 @@
   </properties>
   <dependencies>
     <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-redis</artifactId>
     </dependency>
@@ -50,6 +58,7 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>2.6.2</version>
         <configuration>
           <mainClass>com.xzlcorp.exception.transfer.ExceptionTransferApplication</mainClass>
 <!--          <outputDirectory>../target</outputDirectory>-->
