--- a/exception-transfer/src/main/resources/application.yml
+++ b/exception-transfer/src/main/resources/application.yml
@@ -1,45 +1,6 @@
-server:
-  port: 9997
-#  address: 0.0.0.0
-  servlet:
-    encoding:
-      force: true
-      charset: UTF-8
+spring:
+  profiles:
+    active: dev
 
-spring:
-  application:
-    name: exception-transfer
-  main:
-    allow-bean-definition-overriding: true
-  # database
-  redis:
-    host: 192.168.6.194
-    port: 6379
 
-feign:
-  client:
-    config:
-      dashboard:
-        connect-timeout: 5000
-        read-timeout: 10000
-      manager:
-        connect-timeout: 5000
-        read-timeout: 10000
----
-spring:
-  profiles: dev
-eureka:
-  client:
-    service-url:
-      defaultZone: http://192.168.6.174:10010/eureka/
-  instance:
-    hostname: 192.168.6.174
----
-spring:
-  profiles: test
-eureka:
-  client:
-    service-url:
-      defaultZone: http://192.168.6.182:10010/eureka/
-  instance:
-    hostname: 192.168.6.182
+
