--- a/exception-dashboard/pom.xml
+++ b/exception-dashboard/pom.xml
@@ -44,10 +44,11 @@
       <artifactId>spring-session-data-redis</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-log4j2</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.springframework.boot</groupId>-->
+<!--      <artifactId>spring-boot-starter-log4j2</artifactId>-->
+<!--      <version>2.6.2</version>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>com.xzlcorp</groupId>
       <artifactId>exception-common</artifactId>
