--- a/exception-manager/pom.xml
+++ b/exception-manager/pom.xml
@@ -47,10 +47,11 @@
         </exclusion>
       </exclusions>
     </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-log4j2</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.springframework.boot</groupId>-->
+<!--      <artifactId>spring-boot-starter-log4j2</artifactId>-->
+<!--      <version>2.6.2</version>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>com.xzlcorp</groupId>
       <artifactId>exception-common</artifactId>
