--- a/exception-transfer/src/main/resources/bootstrap.yml
+++ b/exception-transfer/src/main/resources/bootstrap.yml
@@ -1,11 +1,3 @@
-#server:
-#  port: 9997
-#  #  address: 0.0.0.0
-#  servlet:
-#    encoding:
-#      force: true
-#      charset: UTF-8
-
 spring:
   application:
     name: exception-transfer
@@ -20,4 +12,22 @@ spring:
         port: 8848
         file-extension: yaml
         namespace: dev
+    sentinel:
+      transport:
+        dashboard: localhost:8080
+        port: 8719
+#        client-ip: 172.16.10.27
+        datasource:
+          ds1:
+            nacos:
+              server-addr: 121.37.67.93
+              dataId: exception-transfer
+              groupId: DEFAULT_GROUP
+              data-type: json
+              rule-type: flow
 
+management:
+  endpoint:
+    web:
+      exposure:
+        include: '*'
