--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
     <module>exception-manager</module>
     <module>exception-transfer</module>
     <module>exception-cloud-gateway</module>
-    <module>nacos-payment-provider</module>
   </modules>
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -72,7 +71,11 @@
       <artifactId>mybatis-spring-boot-starter</artifactId>
       <version>1.3.2</version>
     </dependency>
-
+<!--    <dependency>-->
+<!--      <groupId>org.springframework.boot</groupId>-->
+<!--      <artifactId>spring-boot-starter-log4j2</artifactId>-->
+<!--      <version>2.6.2</version>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>jakarta.validation</groupId>
       <artifactId>jakarta.validation-api</artifactId>
@@ -152,6 +155,7 @@
       <plugin>
         <groupId>org.mybatis.generator</groupId>
         <artifactId>mybatis-generator-maven-plugin</artifactId>
+        <version>1.4.0</version>
       </plugin>
       <plugin>
         <groupId>com.spotify</groupId>
