--- a/exception-dashboard/pom.xml
+++ b/exception-dashboard/pom.xml
@@ -63,7 +63,7 @@
     <version>2.6.2</version>
         <configuration>
           <mainClass>com.xzlcorp.exception.dashboard.ExceptionDashboardApplication</mainClass>
-<!--          <outputDirectory>../target</outputDirectory>-->
+          <outputDirectory>../target</outputDirectory>
         </configuration>
         <executions>
           <execution>
