--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <java.version>11</java.version>
     <harbor>121.37.67.93:8085</harbor>
     <harborRepo>tensquare</harborRepo>
+    <serviceVer>0.0.1</serviceVer>
 <!--    <sonar.projectKey>backend_exception-service_AXzUX8y4Cgq56jMkNLpg</sonar.projectKey>-->
   </properties>
   <dependencyManagement>
