--- a/exception-cloud-gateway/pom.xml
+++ b/exception-cloud-gateway/pom.xml
@@ -66,7 +66,7 @@
           </repository>
           <tag>${project.version}</tag>
           <buildArgs>
-            <PKG>target/${project.artifactId}-${project.version}.jar</PKG>
+            <PKG>../target/${project.artifactId}-${project.version}.jar</PKG>
           </buildArgs>
         </configuration>
       </plugin>
