--- a/exception-dashboard/pom.xml
+++ b/exception-dashboard/pom.xml
@@ -83,7 +83,7 @@
           </repository>
           <tag>${project.version}</tag>
           <buildArgs>
-            <PKG>target/${project.artifactId}-${project.version}.jar</PKG>
+            <PKG>../target/${project.artifactId}-${project.version}.jar</PKG>
           </buildArgs>
         </configuration>
       </plugin>
