--- a/exception-cloud-gateway/pom.xml
+++ b/exception-cloud-gateway/pom.xml
@@ -46,7 +46,7 @@
         <version>2.6.2</version>
         <configuration>
           <mainClass>com.xzlcorp.exception.gateway.ExceptionGatewayApplication</mainClass>
-          <outputDirectory>../target</outputDirectory>
+          <!-- <outputDirectory>../target</outputDirectory> -->
         </configuration>
         <executions>
           <execution>
@@ -66,7 +66,7 @@
           </repository>
           <tag>${project.version}</tag>
           <buildArgs>
-            <PKG>../target/${project.artifactId}-${project.version}.jar</PKG>
+            <PKG>target/${project.artifactId}-${project.version}.jar</PKG>
           </buildArgs>
         </configuration>
       </plugin>
