--- a/exception-manager/pom.xml
+++ b/exception-manager/pom.xml
@@ -85,7 +85,7 @@
     <version>2.6.2</version>
         <configuration>
           <mainClass>com.xzlcorp.exception.manager.ExceptionManagerApplication</mainClass>
-          <outputDirectory>../target</outputDirectory>
+          <!-- <outputDirectory>../target</outputDirectory> -->
         </configuration>
         <executions>
           <execution>
@@ -105,7 +105,7 @@
           </repository>
           <tag>${project.version}</tag>
           <buildArgs>
-            <PKG>../target/${project.artifactId}-${project.version}.jar</PKG>
+            <PKG>target/${project.artifactId}-${project.version}.jar</PKG>
           </buildArgs>
         </configuration>
       </plugin>
