--- a/exception-dashboard/deploy/deploy.yml
+++ b/exception-dashboard/deploy/deploy.yml
@@ -33,6 +33,8 @@ spec:
  #           failureThreshold: 30
  #           periodSeconds: 5
           imagePullPolicy: Always
+          args:
+            - "--spring.profiles.active=$BRANCH_NAME"
           name: app
           ports:
             - containerPort: 8080
