--- a/exception-dashboard/src/main/resources/bootstrap.yml
+++ b/exception-dashboard/src/main/resources/bootstrap.yml
@@ -11,4 +11,4 @@ spring:
         server-addr: 121.37.67.93
         port: 8848
         file-extension: yaml
-
+        namespace: ${spring.profiles.active}
