--- a/exception-dashboard/src/main/resources/bootstrap.yml
+++ b/exception-dashboard/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
       discovery:
         server-addr: 121.37.67.93
         port: 8848
-        group: dev
+        group: ${spring.profiles.active}
       config:
         server-addr: 121.37.67.93
         port: 8848
