--- a/exception-manager/src/main/resources/bootstrap.yml
+++ b/exception-manager/src/main/resources/bootstrap.yml
@@ -9,6 +9,7 @@ spring:
       discovery:
         server-addr: 121.37.67.93
         group: ${spring.profiles.active}
+        namespace: ${spring.profiles.active}
       config:
         server-addr: 121.37.67.93
         file-extension: yaml
