--- a/exception-dashboard/src/main/resources/bootstrap.yml
+++ b/exception-dashboard/src/main/resources/bootstrap.yml
@@ -9,6 +9,7 @@ spring:
         server-addr: 103.105.200.216
         group: ${spring.profiles.active}
         namespace: ${spring.profiles.active}
+        cluster-name: BJ
       config:
         server-addr: 103.105.200.216
         file-extension: yaml
