--- a/exception-transfer/src/main/resources/bootstrap.yml
+++ b/exception-transfer/src/main/resources/bootstrap.yml
@@ -7,12 +7,14 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 103.105.200.216
+#        server-addr: 103.105.200.216
+        server-addr: 192.168.6.194:5011
         group: ${spring.profiles.active}
         namespace: ${spring.profiles.active}
         cluster-name: BJ
       config:
-        server-addr: 103.105.200.216
+#        server-addr: 103.105.200.216
+        server-addr: 192.168.6.194:5011
         file-extension: yaml
         namespace: ${spring.profiles.active}
 #    sentinel:
